--- a/scheduling/src/main/resources/templates/breaktime/breaktime-list.html
+++ b/scheduling/src/main/resources/templates/breaktime/breaktime-list.html
@@ -193,7 +193,7 @@
 															aria-hidden="true"
 														></i></a></td>
 													<td><a
-														th:if="${breaktime.room_shift.size() ==0} and ${breaktime.teacher.size() ==0} "
+														th:if="${breaktime.room_shift.size() ==0} and ${breaktime.teacher_lecture.size() ==0} "
 														class="btn btn-danger btn-sm aButton"
 														data-target="#modal"
 														data-toggle="modal"
