--- a/scheduling/src/main/resources/templates/room/room shift schedule/room-schedule-form.html
+++ b/scheduling/src/main/resources/templates/room/room shift schedule/room-schedule-form.html
@@ -85,10 +85,10 @@
 	rel='stylesheet'
 	type='text/css'
 >
-	<link
-			rel="stylesheet"
-			th:href="@{/assets/css/contents.css}"
-	>
+<link
+	rel="stylesheet"
+	th:href="@{/assets/css/contents.css}"
+>
 
 <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/html5shiv/3.7.3/html5shiv.min.js"></script> -->
 
@@ -97,176 +97,158 @@
 	rel="stylesheet"
 	th:href="@{/assets/css/main.css}"
 >
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
+></script>
+<script th:src="@{/assets/js/Form/Dropdown.js}"></script>
 </head>
-<body>
+<!-- th:onclick="'DeleteRoomBreak_id('+${break.id}+','+${rooms.Id}+')'"-->
 
+<span th:if="${shift_schedule.subject !=null}"> <body th:onload="'Change_id('+${shift_schedule.subject.id}+', ' + ${shift_schedule.room_shift.id} + ' , '+ ${teacher_id.id} +')'">
+</span>
+<span th:if="${shift_schedule.subject == null}"><body></span>
 	<div class="container-fluid rounded">
 		<div
 			class="row container_info"
 			style=""
 		>
 
-			<div class="col-md-5" >
+			<div class="col-md-5">
 				<h1>Room Schedule Information</h1>
 
 				<form
-					action="#"
-					th:action="@{/subject/save}"
+					th:object="${shift_schedule}"
+					th:action="@{/room/schedule/add}"
 					method="POST"
 				>
+					<input
+						type="hidden"
+						th:field=*{id}
+					>
 
 					<div class="form-group col-md-12">
-						<label for="subject_id">Subject Id ( Remain zero if you will add)	
-						</label>
-						<div class="input-group mb-3">
-							<input
-								type="number"
-								class="form-control"
-								id="subject_id"
-								placeholder="Subject Id"
-							>
-						</div>
-					</div>
-
-					<div class="form-group col-md-12">
-						<label for="subject_name">Subject Name 
-						</label>
-						<div class="input-group mb-3">
-							<input
-								type="text"
-								class="form-control"
-								id="subject_name"
-								placeholder="Subject Name"
-							>
-						</div>
-
-					</div>
-
-					<div class="form-group col-md-12">
-
 						<div class="input-group mb-3">
 							<div class="col-md-6">
-								<label for="subject_code">Subject Code (Optional)</label> <input
-									type="text"
+								<label>Room Name</label> <select
 									class="form-control"
-									id="subject_code"
-									placeholder="Subject Code"
+									th:field="*{room_shift.room}"
+									id="room"
 								>
+									<!-- selected -->
+									<option
+										th:each="room: ${room_list}"
+										th:value="${room.id}"
+										th:text="${room.roomName}"
+									></option>
+								</select>
 
 							</div>
 							<div class="col-md-6">
-								<label for="subject_units">Subject Units (Optional)</label> <input
-									type="text"
+								<label for="subject_units">Shift Name</label> <select
 									class="form-control"
-									id="subject_units"
-								 	placeholder="Subject Units"
+									th:field="*{room_shift}"
+									id="shift"
 								>
+									<!-- selected -->
+
+								</select>
 							</div>
 						</div>
+
 					</div>
 
 					<div class="form-group col-md-12">
-
 						<div class="input-group mb-3">
 							<div class="col-md-6">
-								<label for="subject_hour">Subject Hour
-								</label>
-									<input
-									type="number"
+								<label for="subject_code">Strand Name </label> <select
 									class="form-control"
-									id="subject_hour"
-									placeholder="Subject Hour"
+									id="strand"
+									th:field="*{room_shift.strandAndCourse}"
 								>
+									<!-- selected -->
+									<option
+										th:each="strand: ${strand_list}"
+										th:text="${strand.strandName}"
+										th:value="${strand.id}"
+									>
+								</select>
+
 							</div>
 							<div class="col-md-6">
-								<label for="subject_hour">Subject Minute
-								</label>
-								<input
-									type="number"
+								<label>Subject</label> <select
 									class="form-control"
-									id="subject_minute"
-									placeholder="Subject Minute"
+									id="strand_subject"
+									th:field="*{subject}"
 								>
+									<!-- selected -->
+
+								</select>
 							</div>
 						</div>
+
 					</div>
 
 					<div class="form-group col-md-12">
-
 						<div class="input-group mb-3">
-
-
 							<div class="col-md-6">
-
-								<label for="subject_name">Subject Category
-								</label>
-								<div class="input-group mb-3">
-									<div class="form-check-inline">
-										<label class="form-check-label"> <input
-											type="radio"
-											class="form-check-input"
-											value="Major"
-											name="optradio"
-										> Major
-
-										</label>
-									</div>
-									<div class="form-check-inline">
-										<label class="form-check-label"> <input
-											type="radio"
-											class="form-check-input"
-											value="Minor"
-											name="optradio"
-										> Minor
-										</label>
-									</div>
-								</div>
-
+								<label>Start Time</label> <input
+									type="time"
+									th:field="*{start_time}"
+									class="form-control"
+								/>
 							</div>
-
 							<div class="col-md-6">
-
-								<label for="subject_name">Subject Status
-								</label>
-
-								<div class="input-group mb-3">
-									<div class="form-check-inline">
-										<label class="form-check-label"> <input
-											type="radio"
-											class="form-check-input"
-											value="Active"
-											name="optradio"
-										> Active
-
-										</label>
-									</div>
-									<div class="form-check-inline">
-										<label class="form-check-label"> <input
-											type="radio"
-											class="form-check-input"
-											value="In Active"
-											name="optradio"
-										> In Active
-										</label>
-									</div>
-								</div>
-
+								<label for="subject_units">End time</label> <input
+									type="time"
+									th:field="*{end_time}"
+									class="form-control"
+								/>
 							</div>
 						</div>
+
 					</div>
+
+					<div class="form-group col-md-12">
+						<div class="input-group mb-3">
+							<div class="col-md-6">
+								<label for="subject_code">Select Day</label> <select
+									class="form-control"
+									th:field="*{lecture_day}"
+									id="day_lecture"
+								>
+									<!-- selected -->
+									<option th:value="'MWF'">MWF</option>
+									<option th:value="'TTH'">TTH</option>
+								</select>
+							</div>
+							<div class="col-md-6">
+								<label for="subject_units">Select Teacher</label> <select
+									class="form-control"
+									id="teacher"
+									th:field="*{teacher}"
+								>
+									<!-- selected -->
+								</select>
+							</div>
+
+						</div>
+
+					</div>
+
 
 					<div class="form-group col-md-12">
 						<div class="input-group mb-3">
 							<input
 								type="submit"
 								class="btn btn-success form-control"
-								value="Add or Update"
+								th:value="${action}"
 							>
 						</div>
 					</div>
 					<div class="form-group col-md-12">
 						<div class="input-group mb-3">
 							<a
+								th:if="${!action.equals('Add Schedule')}"
 								onclick="button_delete()"
 								style="color: white;"
 								class="btn btn-danger form-control"
@@ -328,7 +310,6 @@
 				</div>
 				<!-- .content -->
 				<a
-					
 					class="btn btn-info btn-block"
 					title="View"
 					style="margin-top: 10px; margin-bottom: 10px;"
@@ -340,34 +321,34 @@
 	<!-- Scripts -->
 	<!--  <script th:src="@{/assets/js/sample.js}"></script> -->
 
-	<script src="https://cdn.jsdelivr.net/npm/jquery@2.2.4/dist/jquery.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.4/dist/umd/popper.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/jquery-match-height@0.7.2/dist/jquery.matchHeight.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.min.js"></script>
-	
+	<script
+		src="https://cdn.jsdelivr.net/npm/jquery@2.2.4/dist/jquery.min.js"
+	></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/popper.js@1.14.4/dist/umd/popper.min.js"
+	></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+	></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/jquery-match-height@0.7.2/dist/jquery.matchHeight.min.js"
+	></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.min.js"
+	></script>
+
 	<script th:src="@{/assets/js/lib/data-table/datatables.min.js}"></script>
-    <script th:src="@{/assets/js/lib/data-table/dataTables.bootstrap.min.js}"></script>
-    <script th:src="@{/assets/js/lib/data-table/dataTables.buttons.min.js}"></script>
-    <script th:src="@{/assets/js/lib/data-table/buttons.bootstrap.min.js}"></script>
-    <script th:src="@{/assets/js/lib/data-table/jszip.min.js}"></script>
-    <script th:src="@{/assets/js/lib/data-table/vfs_fonts.js}"></script>
-    <script th:src="@{/assets/js/lib/data-table/buttons.html5.min.js}"></script>
-    <script th:src="@{/assets/js/lib/data-table/buttons.print.min.js}"></script>
-    <script th:src="@{/assets/js/lib/data-table/buttons.colVis.min.js}"></script>
-    <script th:src="@{/assets/js/init/datatables-init.js}"></script>
-	    <script th:src="@{/assets/js/Schedule.js}"></script>
-
-	<script type="text/javascript">
-		function button_delete() {
-			var subject_id = document.getElementById("subject_id").value;
-
-			window.location = "/subject/delete?subject_id=" + subject_id;
-		}
-
-		$(document).ready(function() {
-			$('#bootstrap-data-table-export').DataTable();
-		});
-	</script>
+	<script
+		th:src="@{/assets/js/lib/data-table/dataTables.bootstrap.min.js}"
+	></script>
+	<script th:src="@{/assets/js/lib/data-table/dataTables.buttons.min.js}"></script>
+	<script th:src="@{/assets/js/lib/data-table/buttons.bootstrap.min.js}"></script>
+	<script th:src="@{/assets/js/lib/data-table/jszip.min.js}"></script>
+	<script th:src="@{/assets/js/lib/data-table/vfs_fonts.js}"></script>
+	<script th:src="@{/assets/js/lib/data-table/buttons.html5.min.js}"></script>
+	<script th:src="@{/assets/js/lib/data-table/buttons.print.min.js}"></script>
+	<script th:src="@{/assets/js/lib/data-table/buttons.colVis.min.js}"></script>
+	<script th:src="@{/assets/js/init/datatables-init.js}"></script>
+	<script th:src="@{/assets/js/Schedule.js}"></script>
 </body>
 </html>
