Improved the Algho Need login page

--- a/scheduling/src/main/resources/static/assets/css/main.css
+++ b/scheduling/src/main/resources/static/assets/css/main.css
@@ -23,27 +23,25 @@
 	float:right;
 }
 
-
-.btn-group a{
-	border:1px solid black;
-}
-
-.buttons-copy{
-	
-}
-
 .buttons-csv{
-	
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-left: 10px !important;
 }
 
 .buttons-excel{
-	
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-left: 10px !important;
 }
 .buttons-pdf{
-	
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-left: 10px !important;
 }
 .buttons-print{
-	
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
       
