--- a/scheduling/src/main/resources/templates/room/room shift schedule/room-schedule.html
+++ b/scheduling/src/main/resources/templates/room/room shift schedule/room-schedule.html
@@ -1,4 +1,4 @@
-
+ 
 <!DOCTYPE html>
 <html
 	lang="en"
@@ -218,7 +218,7 @@
 														></i>
 													</a></td>
 													<td><a
-														th:onclick="'UpdateRoomSchedule_id('+${schedule.id}+')'"
+														th:onclick="'DeleteRoomSchedule_id	('+${schedule.id}+')'"
 														data-target="#modal"
 														data-toggle="modal"
 														class="btn btn-danger btn-sm aButton"
