--- a/scheduling/src/main/resources/templates/subject/subject add strand/add-subject-strand.html
+++ b/scheduling/src/main/resources/templates/subject/subject add strand/add-subject-strand.html
@@ -228,7 +228,7 @@
 		// }
 
 		$(document).ready(function() {
-			$('#bootstrap-data-table-export').DataTable();
+			$('#bootstrap-data-table').DataTable();
 		});
 	</script>
 </body>
