--- a/scheduling/src/main/resources/templates/teacher/teacher information/teacher-information-form.html
+++ b/scheduling/src/main/resources/templates/teacher/teacher information/teacher-information-form.html
@@ -180,11 +180,13 @@
 								placeholder="First Name"
 								style="margin-right: 10px;"
 								th:field="*{firstName}"
+								required
 							> <input
 								type="text"
 								class="form-control"
 								placeholder="Last Name"
 								th:field="*{lastName}"
+								required
 							>
 						</div>
 					</div>
@@ -220,6 +222,7 @@
 								class="form-control"
 								placeholder="Username"
 								th:field="*{users.username}"
+								required
 							>
 						</div>
 					</div>
@@ -458,30 +461,27 @@
 													<th>Strand</th>
 													<th>Grade</th>
 													<th>Section</th>
-													<th class="th_end">Delete</th>
+													<th>Start Time</th>
+													<th>End Time</th>
 												</tr>
 											</thead>
 											<tbody>
-												<tr>
-
-													<td></td>
-													<td></td>
-													<td></td>
-													<td></td>
-													<td></td>
-													<td></td>
-													<td></td>
-													<td></td>
-													<td><a
-														style="width: 100%; color: white;"
-														class="btn btn-danger btn-sm"
-														onclick="if (!(confirm('Are you sure you want to delete this Strand?'))) return false"
-													> <i
-															class="fa fa-trash"
-															aria-hidden="true"
-														></i>
-													</a></td>
+											<span th:each="schedule: ${teacher_schedule}">
+											<span th:each="shift: ${schedule.room_shift}">
+												<tr th:each="student:${shift.studentList}">
+													<td th:text="${student.firstName}"></td>
+													<td th:text="${student.lastName}"></td>
+													<td th:text="${student.sex}"></td>
+													<td th:text="${shift.room.roomName}"></td>
+													<td th:text="${shift.shiftName}"></td>
+													<td th:text="${shift.strandAndCourse.strandName}"></td>
+													<td th:text="${shift.grade}"></td>
+													<td th:text="${shift.section}"></td>
+													<td th:text="${shift.startTime}"></td>
+													<td th:text="${shift.endTime}"></td>
 												</tr>
+												</span>
+												</span>
 											</tbody>
 										</table>
 
@@ -523,15 +523,19 @@
 										>
 											<thead>
 												<tr>
+													<th>Subject Name</th>
 													<th>Start Time</th>
 													<th>End Time</th>
+													<th>Lecture Day</th>
 													<th class="th_end">Delete</th>
 												</tr>
 											</thead>
 											<tbody>
-												<tr>
-													<td></td>
-													<td></td>
+												<tr th:each="schedule: ${teacher_schedule}">
+													<td th:text="${schedule.subject.subjectName}"></td>
+													<td th:text="${schedule.start_time}"></td>
+													<td th:text="${schedule.end_time}"></td>
+													<td th:text="${schedule. lecture_day}"> </td>
 													<td><a
 														class="btn btn-danger btn-sm"
 														style="width: 100%; color: white;"
